[gd_scene load_steps=5 format=3 uid="uid://66bb2p3s8j7w"]

[ext_resource type="Texture2D" uid="uid://d33wcvsaqla07" path="res://assets/Рыцари/Tiny Swords (Update 010)/UI/Banners/Carved_3Slides.png" id="1_x3w2j"]
[ext_resource type="Script" path="res://scenes/Вступление.gd" id="1_y1ok0"]
[ext_resource type="LabelSettings" uid="uid://d2lgepsbd2l1o" path="res://scenes/Вступление.tres" id="3_3w863"]

[sub_resource type="CanvasTexture" id="CanvasTexture_xrc3n"]

[node name="Вступление" type="Node2D"]
script = ExtResource("1_y1ok0")

[node name="Черный фон" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
position = Vector2(575.158, 323.152)
scale = Vector2(-1153.82, 650.301)
texture = SubResource("CanvasTexture_xrc3n")

[node name="Диалоговое окно" type="Sprite2D" parent="."]
position = Vector2(575.983, 535.271)
scale = Vector2(6.05431, 4.00339)
texture = ExtResource("1_x3w2j")

[node name="Button" type="Button" parent="."]
offset_left = -11.0
offset_top = -6.0
offset_right = 1161.0
offset_bottom = 657.0
flat = true

[node name="Text1" type="Label" parent="."]
offset_left = 109.0
offset_top = 450.0
offset_right = 1070.0
offset_bottom = 617.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 29
text = "ебаный роооооот"
label_settings = ExtResource("3_3w863")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
justification_flags = 3
clip_text = true

[node name="Timer" type="Timer" parent="Text1"]

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Text1/Timer" to="." method="_on_timer_timeout"]
